--- a/04_Image Enhancement Using Spatial Filters.ipynb
+++ b/04_Image Enhancement Using Spatial Filters.ipynb
@@ -20,21 +20,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "error",
-     "evalue": "OpenCV(4.8.0) D:\\a\\opencv-python\\opencv-python\\opencv\\modules\\imgproc\\src\\filter.dispatch.cpp:1530: error: (-215:Assertion failed) !_src.empty() in function 'cv::filter2D'\n",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31merror\u001b[0m                                     Traceback (most recent call last)",
-      "\u001b[1;32mg:\\My Drive\\DIP\\KSIT_CSE\\04_Image Enhancement Using Spatial Filters.ipynb Cell 2\u001b[0m line \u001b[0;36m7\n\u001b[0;32m      <a href='vscode-notebook-cell:/g%3A/My%20Drive/DIP/KSIT_CSE/04_Image%20Enhancement%20Using%20Spatial%20Filters.ipynb#X35sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39m#assert img is not None, \"file could not be read, check with os.path.exists()\"\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/g%3A/My%20Drive/DIP/KSIT_CSE/04_Image%20Enhancement%20Using%20Spatial%20Filters.ipynb#X35sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m kernel \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mones((\u001b[39m7\u001b[39m,\u001b[39m7\u001b[39m),np\u001b[39m.\u001b[39mfloat32)\u001b[39m/\u001b[39m\u001b[39m25\u001b[39m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/g%3A/My%20Drive/DIP/KSIT_CSE/04_Image%20Enhancement%20Using%20Spatial%20Filters.ipynb#X35sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m dst \u001b[39m=\u001b[39m cv\u001b[39m.\u001b[39;49mfilter2D(img,\u001b[39m-\u001b[39;49m\u001b[39m1\u001b[39;49m,kernel)\n",
-      "\u001b[1;31merror\u001b[0m: OpenCV(4.8.0) D:\\a\\opencv-python\\opencv-python\\opencv\\modules\\imgproc\\src\\filter.dispatch.cpp:1530: error: (-215:Assertion failed) !_src.empty() in function 'cv::filter2D'\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import cv2 as cv\n",
@@ -47,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -241,13 +229,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(<matplotlib.image.AxesImage at 0x1de253fa050>, Text(0.5, 1.0, 'Original'))"
+       "(<matplotlib.image.AxesImage at 0x162e951e990>, Text(0.5, 1.0, 'Original'))"
       ]
      },
      "execution_count": 23,
@@ -272,13 +260,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(<matplotlib.image.AxesImage at 0x1de2a873290>, Text(0.5, 1.0, 'Blurred'))"
+       "(<matplotlib.image.AxesImage at 0x162e951f0d0>, Text(0.5, 1.0, 'Blurred'))"
       ]
      },
      "execution_count": 24,
@@ -313,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -384,13 +372,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(<matplotlib.image.AxesImage at 0x1de2a830dd0>,\n",
+       "(<matplotlib.image.AxesImage at 0x162e960b090>,\n",
        " Text(0.5, 1.0, ' original Image'))"
       ]
      },
@@ -415,13 +403,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(<matplotlib.image.AxesImage at 0x1de2a5f8dd0>,\n",
+       "(<matplotlib.image.AxesImage at 0x162e91de990>,\n",
        " Text(0.5, 1.0, ' Bilateral Filter'))"
       ]
      },
@@ -458,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -504,13 +492,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(<Axes: >, <matplotlib.image.AxesImage at 0x1de2a444690>)"
+       "(<Axes: >, <matplotlib.image.AxesImage at 0x162e9016990>)"
       ]
      },
      "execution_count": 30,
@@ -548,13 +536,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(<Axes: >, <matplotlib.image.AxesImage at 0x1de2a970dd0>)"
+       "(<Axes: >, <matplotlib.image.AxesImage at 0x162e69e7710>)"
       ]
      },
      "execution_count": 31,
@@ -579,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -605,6 +593,20 @@
     "plt.subplot(122),plt.imshow(edges,cmap = 'gray')\n",
     "plt.title('Edge Image'), plt.xticks([]), plt.yticks([])\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Thank you "
    ]
   }
  ],
